--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checklist Harian - PT. ABC</title>
+    <title>Checklist Harian PM-A</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -205,7 +205,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="https://app.spunindo.com/msjasset/storage/logo_small.png" alt="Logo PT. ABC">
+                <img src="https://app.spunindo.com/msjasset/storage/logo_small.png" alt="Logo PT. Multi Spunindo Jaya Tbk.">
             </div>
             <h1>CHECKLIST HARIAN</h1>
             <p>Silakan pilih checklist harian yang ingin Anda isi untuk memastikan operasional berjalan dengan lancar dan efisien</p>
@@ -272,7 +272,7 @@
         </main>
         
         <footer>
-            <p>&copy; 2023 PT. Multi Spunindo Jaya Tbk. - Sistem Checklist Harian</p>
+            <p>&copy; 2025 PT. Multi Spunindo Jaya Tbk.</p>
             <div class="counter">Total Checklist Tersedia: 7</div>
         </footer>
     </div>
