feat(html): Add checklist separator and Histats analytics
- Added a "Checklist Harian" separator above the buttons container for better organization
- Integrated Histats.com tracking script to monitor page visits and user engagement

--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@
 
         <main>
             <div class="buttons-container">
+                <div class="separator">Checklist Harian</div>
+
                 <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__V-pYwJUQ083UEFURUVIR1o2NExWMk02NzNJQ0RSQy4u&origin=QRCode"
                     class="btn">
                     <i class="fas fa-list-check"></i>
@@ -373,6 +375,22 @@
         document.querySelector('.container').style.transform = 'translateY(20px)';
         document.querySelector('.container').style.transition = 'opacity 0.8s ease, transform 0.8s ease';
     </script>
+
+    <!-- Histats.com  (div with counter) -->
+    <div id="histats_counter"></div>
+    <!-- Histats.com  START  (aync)-->
+    <script type="text/javascript">var _Hasync = _Hasync || [];
+        _Hasync.push(['Histats.start', '1,5004165,4,10,200,40,00011111']);
+        _Hasync.push(['Histats.fasi', '1']);
+        _Hasync.push(['Histats.track_hits', '']);
+        (function () {
+            var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+            hs.src = ('//s10.histats.com/js15_as.js');
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+        })();</script>
+    <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?5004165&101"
+                alt="free web page hit counter" border="0"></a></noscript>
+    <!-- Histats.com  END  -->
 </body>
 
 </html>
